<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="welcome_tour">Welcome Tour</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="continue_string">Continue</string>
    <string name="welcome_to_noteshelf">Welcome to Noteshelf!</string>
    <string name="full_featured_digital_note_taking">Full-Featured Digital Note-Taking</string>
    <string name="take_notes">Take Notes</string>
    <string name="record_audio">Record Audio</string>
    <string name="add_photos">Add Photos</string>
    <string name="markup_documents">Markup Documents or Images</string>
    <string name="draw_perfect_shapes">Draw Perfect Shapes</string>
    <string name="extensive_library_of_covers_and_papers">Select Different Covers and Papers</string>
    <string name="rich_text_formatting">Rich Text Formatting</string>
    <string name="great_writing_tools">Classic Writing Tools</string>
    <string name="markup_your_documents">Markup Documents or Images</string>
    <string name="start_note_taking">Start Note-Taking</string>
    <string name="auth_required">Authorization Required</string>
    <string name="please_read_and_confirm">Please read and confirm to the following, to proceed further.</string>
    <string name="terms">Terms</string>
    <string name="you_agree_to_the_media">You agree to allow for Noteshelf to access your device’s camera, microphone, and media library. These permissions are crucial for various inbuilt features and to provide you a better in-app experience. However, we do not, in any way, store this information for any usage outside the app.</string>
    <string name="you_agree_to_the_network">You agree to allow for Noteshelf to download media and documents over both, Wifi and Mobile data. This is to ensure a seamless in-app experience without any interruptions</string>
    <string name="allow_to_proceed">Allow to Proceed</string>
    <string name="accepted">Accepted</string>
    <string name="cancel_and_quit_app">Cancel and Quit App</string>
    <string name="quick_create">Quick Create</string>
    <string name="import_document">Import Document</string>
    <string name="custom">Custom</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="default_cover">Default Cover</string>
    <string name="select_cover_style">Select Cover Style</string>
    <string name="customize_cover">Create custom cover</string>
    <string name="use_this_cover">Use This Cover</string>
    <string name="create_cover">Create</string>
    <string name="enter_name">Enter name</string>
    <string name="store_sign_up_text">These downloads are available exclusively for Noteshelf Club members.</string>
    <string name="store_sign_up_text2">Sign-up for free.</string>
    <string name="name_already_exists">Name already exists!</string>
    <string name="camera">Camera</string>
    <string name="keep_scan">Keep Scan</string>
    <string name="cropping_image">Cropping image…</string>
    <string name="capturing_image">Capturing image…</string>
    <string name="import_">Import</string>
    <string name="scan_document">Scan Document</string>
    <string name="configuration_change">Configuration change</string>
    <string name="no_scanned_items_found">No scanned items found</string>
    <string name="saved">Saved:</string>
    <string name="share">Share</string>
    <string name="current_page">Current Page</string>
    <string name="all_pages">All Pages</string>
    <string name="select_pages">Select Pages</string>
    <string name="dot_nsa" translatable="false">.nsa</string>
    <string name="dot_png" translatable="false">.png</string>
    <string name="dot_pdf" translatable="false">.pdf</string>
    <string name="theme">Theme</string>
    <string name="writing_style">Writing Style</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="handwriting_recognition">Handwriting Recognition</string>
    <string name="stylus">Stylus</string>
    <string name="pressure_sensitivity">Pressure Sensitivity</string>
    <string name="support">Support</string>
    <string name="send_support_log">Send Logs</string>
    <string name="disable_hyperlinks_when_writing">Disable Hyperlinks When Writing</string>
    <string name="change">Change</string>
    <string name="character_limit_exceeded">Character Limit Exceeded. Please choose a smaller notebook name.</string>
    <string name="special_characters_are_not_allowed">Special characters are not allowed for name.</string>
    <string name="google_drive" translatable="false">Google Drive</string>
    <string name="dropbox" translatable="false">Dropbox</string>
    <string name="do_not_backup">Don\'t Backup</string>
    <string name="notebooks_to_backup">Notebooks to Backup</string>
    <string name="backup_in_progress">Backing up is in progress</string>
    <string name="backing_up_to_x">Backing up to %1$s</string>
    <string name="back_up_on_wifi_only">Backup on WiFi only</string>
    <string name="log">LOG</string>
    <string name="last_back_up_at_time">Last backup at %1$s</string>
    <string name="off">Off</string>
    <string name="sign_out">Sign out</string>
    <string name="evernote_publish">Evernote Publish</string>
    <string name="publish_notebooks">Publish Notebooks</string>
    <string name="evernote_progress_text" translatable="false">%1$.2f MB of %2$.0f MB used</string>
    <string name="evernote_error">Evernote Error</string>
    <string name="evernote_last_sync_time">Last successful sync at %1$s</string>
    <string name="sync_failed_with_reason">Sync failed with reason: %1$s</string>
    <string name="change_page_template">Change Page Template</string>
    <string name="photo">Photo</string>
    <string name="quick_create_settings">Quick Create Settings</string>
    <string name="untitled">Untitled</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_bookmarks_desc">Tap the bookmark icon [img src=bookmark_icon/] on the pages to add them to this view. Long press to add title and color.</string>
    <string name="no_bookmarked_pages">No bookmarked pages</string>
    <string name="bookmark_page">Bookmark Page</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="list">List</string>
    <string name="autoSelectPrevToolTitle">Auto select previous tool</string>
    <string name="eraseEntireStrokeTitle">Erase entire stroke</string>
    <string name="eraseHighlighterStrokeTitle">Erase Highlighter only</string>
    <string name="highlighters">Highlighters</string>
    <string name="pens">Pens</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_full">Favorites (FULL)</string>
    <string name="added">Added!</string>
    <string name="no_favorite_pens">No Favorite Pens</string>
    <string name="no_favorite_des">Tap the heart on the writing tool panel to favorite the active pen.</string>
    <string name="show_favorite_toolbar">Show favorites toolbar</string>
    <string name="pen_tools">Pen Tools</string>
    <string name="edit_colors">Edit Colors</string>
    <string name="delete_colors">Delete Colors</string>
    <string name="choose_color">Choose Color</string>
    <string name="reset">Reset</string>
    <string name="tap_to_choose_color">Tap to edit a color.\nHold and drag to reorder.</string>
    <string name="Tap_on_a_color">Tap on a color to delete.</string>
    <string name="minimum_of_colors">Minimum of %1$d colors required</string>
    <string name="color_pallette">Color Palette</string>
    <string name="add">Add</string>
    <string name="set_size" translatable="false">%1$dsp</string>
    <string name="set_color" translatable="false">#%1$s</string>
    <string name="pages">Pages</string>
    <string name="duplicate_page_singular">Duplicate %1$d page</string>
    <string name="duplicate_page_plural">Duplicate %1$d pages</string>
    <string name="delete_page_singular">Delete %1$d page</string>
    <string name="delete_page_plural">Delete %1$d pages</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="num_selected">%1$d Selected</string>
    <string name="duplicating">Duplicating…</string>
    <string name="saving">Saving…</string>
    <string name="exporting">Exporting…</string>
    <string name="importing">Importing…</string>
    <string name="restoring">Restoring…</string>
    <string name="deleting">Deleting…</string>
    <string name="opening">Opening…</string>
    <string name="generating">Generating…</string>
    <string name="creating">Creating…</string>
    <string name="changing">Changing…</string>
    <string name="downloading">Downloading…</string>
    <string name="moving">Moving…</string>
    <string name="loading">Loading…</string>
    <string name="clipart">Clipart</string>
    <string name="photos">Photos</string>
    <string name="vectors">Vectors</string>
    <string name="set_speed" translatable="false">%1$sx</string>
    <string name="audio_recordings">Audio Recordings</string>
    <string name="set_session">Session %1$d</string>
    <string name="no_audio_recordings">No audio recordings in this notebook.</string>
    <string name="audio_record_progress_alert_title">Cannot perform this operation as an audio recording is in progress.</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="record">Record</string>
    <string name="camera_error">This device doesn\'t support camera</string>
    <string name="camera_access_error">Permissions denied to access camera, please enable it from settings.</string>
    <string name="new_notebook">New Notebook</string>
    <string name="page">Page</string>
    <string name="view_list">View List</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="back_up">Backup</string>
    <string name="add_new">Add New…</string>
    <string name="empty_trash"> Empty Trash</string>
    <string name="search">Search</string>
    <string name="set_version" translatable="false">Version %1$s (%2$d)</string>
    <string name="about_us">About Noteshelf</string>
    <string name="connect_with_other_noteshelfers">Connect with other Noteshelfers</string>
    <string name="like_us_on_facebook">Like on Facebook</string>
    <string name="follow_us_on_instagram">Follow on Instagram</string>
    <string name="find_us_on_twitter">Find on Twitter</string>
    <string name="noteshelf_copyright">Copyright © 2020 Noteshelf. All rights reserved.</string>
    <string name="appearance">Appearance</string>
    <string name="cloud_and_backup"><![CDATA[Cloud & Backup]]></string>
    <string name="advanced">Advanced</string>
    <string name="free_covers_paper_templates"><![CDATA[Free Covers & Paper Templates]]></string>
    <string name="about_noteshelf">About Noteshelf</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="import_photo">Import Photo</string>
    <string name="select">Select</string>
    <string name="page_from_template">Page from Template</string>
    <string name="page_from_photo">Page from Photo</string>
    <string name="new_audio_note">New Audio Note</string>
    <string name="photo_library">Photo Library</string>
    <string name="media_library">Media Library</string>
    <string name="insert_from">Insert from…</string>
    <string name="air_action_btnPress">Change Pen</string>
    <string name="air_action_btnDoubleClick">Open Pen Rack</string>
    <string name="air_action_btnNext">Next Page</string>
    <string name="air_action_btnPrev">Prev Page</string>
    <string name="air_action_btnSwipedown">Zoom out</string>
    <string name="air_action_btnSwipeUp">Zoom in</string>
    <string name="whats_new">What\'s New</string>
</resources>