<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/new_20dp"
    android:paddingTop="@dimen/new_16dp"
    android:paddingEnd="@dimen/new_20dp"
    android:paddingBottom="@dimen/new_24dp">

    <TextView
        android:id="@+id/camera"
        style="@style/PopupItemTextStyle"
        android:drawableStart="@drawable/media_camera"
        android:drawablePadding="@dimen/new_19dp"
        android:text="@string/camera" />

    <include layout="@layout/divider_black" />

    <TextView
        android:id="@+id/photo_library"
        style="@style/PopupItemTextStyle"
        android:drawableStart="@drawable/media_image"
        android:drawablePadding="@dimen/new_19dp"
        android:text="@string/photo_library" />

    <include layout="@layout/divider_black" />

    <TextView
        android:id="@+id/record_audio"
        style="@style/PopupItemTextStyle"
        android:layout_marginTop="@dimen/new_16dp"
        android:drawableStart="@drawable/media_audio"
        android:drawablePadding="@dimen/new_19dp"
        android:text="@string/record_audio" />

    <include layout="@layout/divider_black" />

    <TextView
        android:id="@+id/audio_recordings"
        style="@style/PopupItemTextStyle"
        android:drawableStart="@drawable/media_audiorec"
        android:drawablePadding="@dimen/new_19dp"
        android:text="@string/audio_recordings" />

    <include layout="@layout/divider_black" />

    <TextView
        android:id="@+id/media_library"
        style="@style/PopupItemTextStyle"
        android:layout_marginTop="@dimen/new_16dp"
        android:drawableStart="@drawable/media_sticker"
        android:drawablePadding="@dimen/new_19dp"
        android:text="@string/media_library" />

    <include layout="@layout/divider_black" />

    <TextView
        android:id="@+id/insert_from"
        style="@style/PopupItemTextStyle"
        android:drawableStart="@drawable/media_folder"
        android:drawablePadding="@dimen/new_19dp"
        android:text="@string/insert_from"
        android:visibility="gone" />

    <include
        layout="@layout/divider_black"
        android:visibility="gone" />

</LinearLayout>