<?xml version="1.0" encoding="utf-8"?>
<remote-actions version="1.2">
    <action
        id="air_action_btnPress"
        label="@string/air_action_btnPress"
        priority="1"
        trigger_key="CTRL_LEFT+A">
        <preference
            name="gesture"
            value="click" />
        <preference
            name="button_only"
            value="true" />
    </action>

    <action
        id="air_action_btnDoubleClick"
        label="@string/air_action_btnDoubleClick"
        priority="2"
        trigger_key="CTRL_LEFT+B">
        <preference
            name="gesture"
            value="double_click" />
    </action>

    <action
        id="air_action_btnNext"
        label="@string/air_action_btnNext"
        priority="3"
        trigger_key="CTRL_LEFT+C">
        <preference
            name="gesture"
            value="swipe_left" />
    </action>

    <action
        id="air_action_btnPrev"
        label="@string/air_action_btnPrev"
        priority="4"
        trigger_key="CTRL_LEFT+D">
        <preference
            name="gesture"
            value="swipe_right" />
    </action>

    <action
        id="air_action_btnSwipedown"
        label="@string/air_action_btnSwipedown"
        priority="5"
        trigger_key="CTRL_LEFT+E">
        <preference
            name="gesture"
            value="swipe_down" />
    </action>

    <action
        id="air_action_btnSwipeUp"
        label="@string/air_action_btnSwipeUp"
        priority="6"
        trigger_key="CTRL_LEFT+F">
        <preference
            name="gesture"
            value="swipe_up" />
    </action>

    <!--<action
        id="air_action_btnCircleCW"
        label="@string/air_action_btnCircleCW"
        priority="7"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="CTRL_LEFT+G">
        <preference
            name="gesture"
            value="circle_cw" />
        <preference
            name="motion_only"
            value="true" />
    </action>

    <action
        id="air_action_btnCircleCCW"
        label="@string/air_action_btnCircleCCW"
        priority="8"
        repeatable="true"
        repeatable_interval="short"
        trigger_key="CTRL_LEFT+H">
        <preference
            name="gesture"
            value="circle_ccw" />
        <preference
            name="motion_only"
            value="true" />
    </action>-->

</remote-actions>