<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ns_blue"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstRow"
            style="@style/WelcomeScreenFeature"
            android:drawableStart="@drawable/icon_notes"
            android:text="@string/take_notes" />

        <TextView
            android:id="@+id/secondRow"
            style="@style/WelcomeScreenFeature"
            android:layout_marginTop="@dimen/_8dp"
            android:drawableStart="@drawable/audio"
            android:text="@string/record_audio" />

        <TextView
            android:id="@+id/thirdRow"
            style="@style/WelcomeScreenFeature"
            android:layout_marginTop="@dimen/_8dp"
            android:drawableStart="@drawable/icon_photos"
            android:text="@string/add_photos" />

        <TextView
            android:id="@+id/fourthRow"
            style="@style/WelcomeScreenFeature"
            android:layout_marginTop="@dimen/_8dp"
            android:drawableStart="@drawable/icon_pdf"
            android:text="@string/markup_documents" />

        <TextView
            android:id="@+id/welcome_screen2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_56dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_10sp"
            android:text="@string/full_featured_digital_note_taking"
            android:textColor="@android:color/white"
            android:textSize="@dimen/welcome_screen_title_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>