<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/new_24dp">

        <include layout="@layout/divider_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvQuickCreate"
                style="@style/PopupItemTextStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/quick_create"
                android:drawablePadding="@dimen/new_16dp"
                android:text="@string/quick_create" />

            <ImageView
                android:id="@+id/tvQuickCreateSettings"
                android:layout_width="@dimen/new_34dp"
                android:layout_height="@dimen/new_34dp"
                android:scaleType="fitXY"
                android:src="@drawable/pop_quickcreatesettings" />

        </LinearLayout>

        <include layout="@layout/divider_black" />

        <TextView
            android:id="@+id/tvNewNotebook"
            style="@style/PopupItemTextStyle"
            android:drawableStart="@drawable/new_notebook"
            android:drawablePadding="@dimen/new_16dp"
            android:text="@string/new_notebook" />

        <include layout="@layout/divider_black" />

        <TextView
            android:id="@+id/tvNewAudioNote"
            style="@style/PopupItemTextStyle"
            android:drawableStart="@drawable/audio"
            android:drawablePadding="@dimen/new_16dp"
            android:text="@string/new_audio_note"
            android:visibility="gone" />

        <include layout="@layout/divider_black" />

        <TextView
            android:id="@+id/tvImportDocument"
            style="@style/PopupItemTextStyle"
            android:drawableStart="@drawable/documents"
            android:drawablePadding="@dimen/new_16dp"
            android:text="@string/import_document" />

        <include layout="@layout/divider_black" />

        <TextView
            android:id="@+id/tvImportPhoto"
            style="@style/PopupItemTextStyle"
            android:drawableStart="@drawable/image"
            android:drawablePadding="@dimen/new_16dp"
            android:text="@string/import_photo" />

        <include layout="@layout/divider_black" />

        <TextView
            android:id="@+id/tvScanDocument"
            style="@style/PopupItemTextStyle"
            android:drawableStart="@drawable/scan"
            android:drawablePadding="@dimen/new_16dp"
            android:text="@string/scan_document" />

        <include layout="@layout/divider_black" />

    </LinearLayout>

</ScrollView>